@@ -1,5 +1,8 @@
 2001-01-11  John Harper  <jsh@eazel.com>
 
+	* themes/gtk/theme.jl: rewrote to use define instead of let*
+	for creating bindings
+
 	* po/it.po, po/fr.po: updated translations from Michele
 	Campeotto <micampe@f2s.com> and Christian Marillat
 	<marillat.christian@wanadoo.fr> respectively
